--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,9 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;500;700&display=swap');
+
 :root{
     /* ********* *\
     *   Sizes
     \* ********* */
     --desktop-width: 1440px;
     --mobile-width: 375px;
+    --container-padding: 20px;
 
     /* ********* *\
     *   Colors
@@ -19,6 +22,14 @@
     --thin: 300;
     --normal: 500;
     --bold: 700;
+    
+    /* ********* *\
+    *   Background
+    \* ********* */
+    --quotes: url("../images/pattern-quotes.svg");
+    --background: url("../images/pattern-bg.svg");
+    --curve: url("../images/pattern-curve.svg");
+
 }
 
 html{
@@ -35,5 +46,97 @@ body, html, figure {
 body{
     height: 100vh;
     width: 100vw;
+    font-size: 62.5%;
+    font-family: var(--main-font);
+    display: grid;
+    place-items: center;
 }
+
+.slider{
+    /* background-color: red; */
+    background-image: var(--curve);
+    background-position: bottom left;
+    background-repeat: no-repeat;
+    background-size: contain;
+    /* max-width: var(--mobile-width); */
+    padding: 0 20px;
+}
+.slider::after{
+    content: "";
+    display: block;
+    height: 70px;
+    width: 100%;
+}
+.slider__fig-container{
+    background-image: var(--background);
+    background-position: center;
+    background-size: contain;
+    background-repeat: no-repeat;
+    height: 325px;
+    padding: var(--container-padding);
+}
+
+/************** Image */
+
+.slider__fig-container figure{
+    border-radius: 10px;
+    max-width: 275px;
+    width: 85%;
+    margin: 15px auto 0;
+    overflow: hidden;
+}
+.slider__fig-container img{
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+}
+
+/************** Text */
+.slider__text-container {
+    background-image: var(--quotes);
+    background-position: top center;
+    background-size: 70px;
+    background-repeat: no-repeat;
+    margin: 20px 0;
+    padding: calc( var(--container-padding) - 5px ) ;
+    color: var(--dark-blue);
+}
+.slider__text-container p {
+    font-size: 1.2rem;
+    font-weight: var(--thin);
+    text-align: center;
+    line-height: 1.3em;
+    /* font-size: var(--font-size); */
+}
+.slider__text-container > p::before, p::after{
+    font-size: 1.3em;
+}
+.slider__text-container p::before{
+    content: '“';
+    margin-right: 5px;
+}
+.slider__text-container p::after{
+    content: '”';
+    margin-left: 5px;
+}
+
+.slider__name-label{
+    display: flex;
+    /* flex-grow: 1; */
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+    font-size: 1.5em;
+    width: 120px;
+
+
+}
+.slider__name-label span{
+    color: var(--grayish-blue);
+}
+
+
+
+
+
 
